# Fractal-Visualizer

./: README.md
FractalVisualizer/: CMakeLists.txt
FractalVisualizer/Dependencies/: glad.c
FractalVisualizer/Dependencies/glad/: glad.h
FractalVisualizer/Dependencies/lib/: glfw3.lib
FractalVisualizer/shaders/: fractalFrag.frag  fractalVert.vert
FractalVisualizer/src/: complexParser.cpp  complexParser.h  controls.cpp  controls.h  gui.cpp  gui.h  main.cpp  shader.cpp  shader.h  state.h
